2010-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/46085
	* config/i386/sse.md (reduc_splus_v8sf): Updated.
	(reduc_splus_v4df): Likewise.

2010-10-20  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45860
	* tree-ssa-phiopt.c (cond_store_replacement): Do not do
	conditional store replacement for non-register type stores.

2010-10-20  Eric Botcazou  <ebotcazou@adacore.com>

	* stor-layout.c (skip_simple_constant_arithmetic): New function.
	(self_referential_size): Use it instead of skip_simple_arithmetic.

2010-10-20  Olivier Hainque  <hainque@adacore.com>

	* config/rs6000/rs6000.c (rs6000_reg_live_or_pic_offset_p):
	If the current function calls eh_return, claim live all registers
	that we need to check for liveness otherwise.

2010-10-20  Nicola Pero  <nicola.pero@meta-innovation.com>

	* c-decl.c (c_write_global_declarations): Call
	objc_write_global_declarations when compiling Objective-C.
	* c-lang.c (finish_file): Removed.

2010-10-19  DJ Delorie  <dj@redhat.com>

	* doc/tm.texi.in (TARGET_ASM_JUMP_ALIGN_MAX_SKIP): New.
	(TARGET_ASM_LABEL_ALIGN_AFTER_BARRIER_MAX_SKIP): Change to hook.
	(TARGET_ASM_LOOP_ALIGN_MAX_SKIP): Likewise.
	(TARGET_ASM_LABEL_ALIGN_MAX_SKIP): Likewise.
	* doc/tm.texi: Regenerate.
	* targhooks.h (default_label_align_after_barrier_max_skip,
	default_loop_align_max_skip, default_label_align_max_skip,
	default_jump_align_max_skip): Declare.
	* target.def (label_align_after_barrier_max_skip): New.
	(loop_align_max_skip): New.
	(label_align_max_skip): New.
	(jump_align_max_skip): New.
	* system.h (poison): Add those macros to the list.
	* final.c (LABEL_ALIGN_MAX_SKIP): Remove.
	(LOOP_ALIGN_MAX_SKIP): Remove.
	(LABEL_ALIGN_AFTER_BARRIER_MAX_SKIP): Remove.
	(JUMP_ALIGN_MAX_SKIP): Remove.
	(default_label_align_after_barrier_max_skip): New.
	(default_loop_align_max_skip): New.
	(default_label_align_max_skip): New.
	(default_jump_align_max_skip): New.
	(compute_alignments): Use the new hooks.
	(shorten_branches): Likewise.
	