@@ -1,3 +1,7 @@
+2010-10-20  Dmitry Melnik  <dm@ispras.ru>
+
+	* gcc.dg/20101013-1.c: New test.
+
 2010-10-20  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/46085
